<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_publisher"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pages"
        android:inputType="number" />

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_isbn"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete" />

    <!-- Search Input -->
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:inputType="text" />

    <!-- Search Button -->
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search" />

    <!-- Book List -->
    <ListView
        android:id="@+id/lvBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>